fixed mis-alignment on FAQ page after span class change; might be able to back this commit out in the future if span styles fixed

--- a/pylowiki/public/styles/civ.css
+++ b/pylowiki/public/styles/civ.css
@@ -203,7 +203,7 @@ form.addGoal{
 
 .nav.nav-tabs.nav-stacked{
    margin-top: 10px;
-   margin-left: -20px;
+   margin-left: -30px;
    width: 230px;
 }
 
